--- a/src/app/dashboard/dashboard.module.css
+++ b/src/app/dashboard/dashboard.module.css
@@ -125,8 +125,17 @@
 
 .dashboard__cardBlockchainContainer {
   margin-block: 2rem;
+  display: flex;
+  gap: 1.2rem;
 }
 
+.dashboard__cardBlockchainContainer > * {
+  flex: 1;
+}
+
+.globe {
+  left: 15px;
+}
 
 .footer__text {
   text-align: center;
