--- a/src/components/layout/DashboardNav/nav.module.css
+++ b/src/components/layout/DashboardNav/nav.module.css
@@ -1,6 +1,8 @@
 .dashboard__nav {
   padding-block: 20px;
   border-bottom: 1px solid hsl(var(--border));
+  position: relative;
+  z-index: 999;
 }
 
 .dashboard__navContainer {
