--- a/src/components/layout/DashboardNav/nav.module.css
+++ b/src/components/layout/DashboardNav/nav.module.css
@@ -13,19 +13,25 @@
 
 .nav__logo {
   display: flex;
-  gap: .6rem;
+  gap: 0.6rem;
   align-items: center;
 }
 
 .nav__logoContainer {
   padding: 12px;
-  border-radius: .8rem;
-  background-color: hsl(var(--primary) / .2);
+  /* border-radius: .8rem; */
+  background-color: hsl(var(--primary) / 0.2);
+  clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
+  width: 55px;
+  height: 55px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .nav__logoIcon {
   font-size: 1.4rem;
-  color: hsl(var(--primary));
+  /* color: hsl(var(--primary)); */
 }
 
 .nav__logoTexts {
@@ -42,7 +48,7 @@
 
 .nav__textsSpan {
   color: hsl(var(--muted-foreground));
-  font-size: .8rem;
+  font-size: 0.8rem;
   font-weight: 300;
 }
 
@@ -54,7 +60,7 @@
 
 .nav__links > *:not(.nav__linksHome) {
   display: flex;
-  gap: .6rem;
+  gap: 0.6rem;
   align-items: center;
 }
 
@@ -74,7 +80,7 @@
 
 .nav__linksGestion {
   display: flex;
-  gap: .6rem;
+  gap: 0.6rem;
   align-items: center;
   padding: 7px 12px;
   text-decoration: none;
